--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,7 +26,8 @@ body{
 }
 
 p {
-  font-family: 'Fira Sans', sans-serif;
+  /* font-family: 'Fira Sans', sans-serif; */
+  font-family: 'IBM Plex Mono', monospace;
   line-height: 2;
   margin-bottom: 2em;
 }
