--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -346,5 +346,8 @@ table td{
 .custom-figure {
   margin-top: 20px;
   margin-bottom: 20px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
