--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 }
 html {
   color: #232333;
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'roboto-mono', monospace;
   font-size: 15px;
   line-height: 2em;
 }
@@ -27,7 +27,7 @@ body{
 
 p {
   /* font-family: 'Fira Sans', sans-serif; */
-  font-family: 'roboto-mono', monospace;
+  font-family: 'Roboto mono', monospace;
   line-height: 2;
   margin-bottom: 2em;
 }
@@ -335,12 +335,13 @@ table {
 table th{
   padding: 6px 13px;
   border: 1px solid #dfe2e5;
-  font-size: large;
+  font-size: 14px;
 }
 
 table td{
   padding: 6px 13px;
   border: 1px solid #dfe2e5;
+  font-size: 13px;
 }
 
 .custom-figure {
