--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -353,6 +353,9 @@ table td{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;  
+  width: auto;     
+  height: auto;     
 }
 
 
