--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -351,7 +351,21 @@ table td{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  max-width: 50%;  
+  max-width: 100%;  
+  width: auto;     
+  height: auto;     
+}
+
+.custom-figure-2 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.custom-figure-2 img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 40%;  
   width: auto;     
   height: auto;     
 }
