--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -370,4 +370,18 @@ table td{
   height: auto;     
 }
 
+.custom-figure-3 {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.custom-figure-3 img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 70%;  
+  width: auto;     
+  height: auto;     
+}
+
 
