--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -326,6 +326,8 @@ color: whitesmoke ;
 
 /* table */
 table {
+  margin-top: 30px; 
+  margin-bottom: 30px;
   border-spacing: 0;
   border-collapse: collapse;
 }
