--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,7 +155,9 @@ header .main {
 }
 h1, h2, h3, h4, h5, h6 {
   font-size: 1.2rem;
-  margin-top: 2em;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  /* margin-top: 2em; */
 }
 
 h1::before { color: var(--maincolor); content: '# '; }
