adding some pages

--- a/themes/gokarna/assets/css/dark.css
+++ b/themes/gokarna/assets/css/dark.css
@@ -5,7 +5,7 @@
   --dark-text-color: white;
   /* Header colors inspired by Dracula theme */
   --h1-color: #65ff89;        /* Dracula foreground - crisp white yello #fefb8d */
-  --h2-color: #f8f8f2;        
+  --h2-color: #bd93f9;
   --h3-color: #fefb8d;        
   --h4-color: #eb89f4;    
 
