--- a/themes/gokarna/layouts/partials/footer.html
+++ b/themes/gokarna/layouts/partials/footer.html
@@ -34,6 +34,6 @@
     {{ end }}
 
     <span>
-        Made with <a target="_blank" href="https://github.com/gokarna-theme/gokarna-hugo">Gokarna</a>
+        trouble maker, punkin' instigator
     </span>
 </footer>
