--- a/themes/gokarna/assets/css/dark.css
+++ b/themes/gokarna/assets/css/dark.css
@@ -1,6 +1,6 @@
 :root {
   --dark-primary-color: 43, 43, 48;
-  --dark-secondary-color: #2d333b;
+  --dark-secondary-color: #1f2021;
   --dark-tertiary-color: #646464;
   --dark-text-color: white;
   /* Header colors inspired by Dracula theme */
