--- a/themes/gokarna/assets/css/dark.css
+++ b/themes/gokarna/assets/css/dark.css
@@ -36,7 +36,7 @@ h4 {
 }
 
 strong, b {
-    color: #ffb86c;  /* Dracula orange */
+    color: #eb89f4;  /* Dracula pink */
     font-weight: bold;
 }
 
